  ~ tags were not saved when editing an item
- Server could not allow parameters for the underlying web service to be passed (-D..)
- Sometimes (discovered when working on the web module) picture are not correctly 
  deleted. This was currently not effecting the Java client, only web client, but
  would / could have caused issues for new developments.


-----------------------------------------------------------------------------------------
Data Crow version 4.4                                              Released on 2022-12-06
-----------------------------------------------------------------------------------------

Thanks to all contributors! Ariel Chyłek, iro-de and anyone who took the time to log
issues and feauture requests. 

[New]
- Added MobyGames online search for games (see https://mobygames.com).
- Added a new setting to regional setting: date format.
- Press F5 to insert a time stamp into a text field. The time stamp is based on the 
  date format setting + HH:mm:ss
- Added a preview pane when selecting images

[Updated]
- Changed the online search to allow for additional filters to be set.
- No pop up message anymore when no search results are found for an online search. 
  Shown in message log instead.
- Added wait time between requests for all online services.
- Long text fields (like description) opened a text view on double click. This has been
  changed to CTRL + mouse click as double click is also used to select a single word.
- Small dialog changes to the item form tabs; saving will now close the dialog and added
  a title to the dialog. 

[Fixed]
- Fixed a NullPointerException when performing a mass update using previous online search
  history.
- None of the online services were set up to take the maximum number of search results
  into account.
- URL field launcher did not work for HTTPS hyper links.
- Scrolling in the card view was sometimes reversed.