@@ -147,6 +147,8 @@ public class DcDatabase {
         if (!isNew()) {
         	new SystemUpgrade(false).start();
         	connection = DatabaseManager.getInstance().getAdminConnection();
+        } else {
+            DcConfig.getInstance().getConnector().executeSQL("SET DATABASE COLLATION SQL_TEXT_UCC");
         }
         
         startQueryQueue();
